service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-webapp
spec:
  type: ClusterIP
  selector:
    app: node-webapp
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 3000
